clang/test/BSC/Negative/Ownership/RuleCheck/builtin_move_to_raw_state/builtin_move_to_raw_state.cbs
// RUN: %clang_cc1 -verify %s

void consume_raw(void *p);
void consume_owned(int *_Owned p);

struct S {
  int *_Owned p;
};

void test_move_whole_var_1(int *_Owned p) {
  consume_raw(__move_to_raw(p));
  consume_owned(p); // expected-error {{use of moved value: `p`}}
}

void test_move_whole_var_2(int *_Owned p) {
  consume_owned(p);
  consume_raw(__move_to_raw(p)); // expected-error {{use of moved value: `p`}}
}

void test_move_field_1(int *_Owned p) {
  struct S s = {.p = p};
  consume_raw(__move_to_raw(s.p));
  consume_owned(s.p); // expected-error {{use of moved value: `s.p`}}
}

void test_move_field_2(int *_Owned p) {
  struct S s = {.p = p};
  consume_owned(s.p);
  consume_raw(__move_to_raw(s.p)); // expected-error {{use of moved value: `s.p`}}
}
